# growthbook-api

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yaml  test.yaml
src/growthbook_api/: main.py  models.py
tests/: fakes.py
tests/integration/: fakes.py  test_api.py
tests/unit/: test_client_factory.py
